# restful-with-flask-project

./: README.md  fileblog.py  launch.sh  pyproject.toml
app/: __init__.py
